<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orient_fleet</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="38198234+skyfty@users.noreply.github.com">petalinux</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>orient_interfaces</depend>
  <depend>rmf_fleet_msgs</depend>
  <depend>rmf_task_msgs</depend>
  <depend>rmf_traffic_msgs</depend>
  <depend>rmf_building_map_tools</depend>
  <depend>rmf_site_map_msgs</depend>
  <depend>python3-paho-mqtt</depend>
  <depend>python3-yaml</depend>
  <depend>python3-pyproj</depend>
  <depend>python3-flask-socketio</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
